--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@ algorithms etc.).
                     <td>
                         Igor S. Sergeev
                         <h4> Complexity of sorting and selection. Materials for lectures </h4>
-                        A draft of the book that can serve as a course of lectures on the complexity of the classical sorting and selection problems (in Russian). Along with a standard material, it contains proofs of some recent non-trivial results like a uniform complexity bound for the sorting of a poset, an asymptotically optimal multiselection algorithm, a lower bound on the complexity of comparator networks for sorting, etc.
+                        A draft of the book that can serve as a course of lectures on the complexity of the classical sorting and selection problems. Along with a standard material, it contains proofs of some recent nontrivial results like a uniform complexity bound for the sorting of a poset, an asymptotically optimal multiselection algorithm, a lower bound on the complexity of comparator networks for sorting, etc.
                         <p> </p>
-                        <a href="./papers/S-lections_161024.pdf">Current version</a> (dated by 16.10.2024) <a href="http://dx.doi.org/10.13140/RG.2.2.28850.41927">DOI</a>
+                        Current version (dated by 05.03.2025) <a href="./papers/S-lectures_050325.pdf">RUS</a> <a href="./papers/S-lectures_eng_050325.pdf">ENG</a> 
+                        <a href="http://dx.doi.org/10.13140/RG.2.2.28850.41927">DOI</a>
                    </td>
                 </tr>
        </tbody>
