--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ algorithms etc.).
                         <h4> Complexity of sorting and selection. Materials for lectures </h4>
                         A draft of the book that can serve as a course of lectures on the complexity of the classical sorting and selection problems. Along with a standard material, it contains proofs of some recent nontrivial results like a uniform complexity bound for the sorting of a poset, an asymptotically optimal multiselection algorithm, a lower bound on the complexity of comparator networks for sorting, etc.
                         <p> </p>
-                        Current version (dated by 05.03.2025) <a href="./papers/S-lectures_050325.pdf">RUS</a> <a href="./papers/S-lectures_eng_050325.pdf">ENG</a> 
+                        Current version (dated by 05.03.2025) <a href="./papers/S-lectures_050325.pdf">RUS</a> <a href="./papers/S-lectures_eng_050325.pdf">ENG</a>
                         <a href="http://dx.doi.org/10.13140/RG.2.2.28850.41927">DOI</a>
                    </td>
                 </tr>
@@ -428,7 +428,8 @@ PDF is available on the <a href="https://keldysh.ru/mvk/index.php?id=vypusk-20">
 <div class="cite">
 <font color="300080">[34]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> Multiplication.</font></i>  Chebyshevskii Sbornik (Chebyshev's Collection). 2020. <b>21</b>(1), 101-134.  <a href="https://doi.org/10.22405/2226-8383-2020-21-1-101-134">DOI</a>
     PDF (in Russian) is available on the
-    <a href="https://www.chebsbornik.ru/jour/article/view/784">web-page</a>
+    <a href="https://www.chebsbornik.ru/jour/article/view/784">web-page</a>;
+    English self-translation: <a href="./papers/mult_survey4_eng.pdf">PDF</a>
 </div>
 
 <div class="comm">
