--- a/index.html
+++ b/index.html
@@ -837,7 +837,8 @@ the table of composite numbers below <font face="serif"><i>n</i></font> is <font
 <div class="cite">
 <font color="300080">[15]</font> Sergeev I. S. <i><font color="300080"> Regular estimates for the complexity of polynomial multiplication and truncated Fourier transform.</font></i>   Prikladnaya Diskretnaya Matematika (Applied Discrete Mathematics). 2011. 4(14), 72-88.
     PDF (in Russian) is available on the
-    <a href="http://journals.tsu.ru/pdm/en/&journal_page=archive&id=444&article_id=41390">web-page</a>
+    <a href="http://journals.tsu.ru/pdm/en/&journal_page=archive&id=444&article_id=41390">web-page</a>;
+    English self-translation: <a href="./papers/multpol_fft_eng.pdf">PDF</a>
 </div>
 
 <div class="comm">
