--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@ the table of composite numbers below <font face="serif"><i>n</i></font> is <font
 <p> <a name="p10"></a></p>
 
 <div class="cite">
-<font color="300080">[10]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> Algorithms for the fast Fourier transform.</font></i>
+<font color="300080">[10]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> Fast Fourier transform algorithms.</font></i>
     in &#8220Diskretnaya Matematika i eyo Prilozheniya&#8221 (Discrete Mathematics and its Applications). Part V. Moscow: Izd. IPM RAN, 2009, 3-23.
     <a href="./papers/fft_ipm.pdf">PDF</a> (in Russian) with additional comments;
     English self-translation: <a href="./papers/fft_ipm_eng.pdf">PDF</a>
