--- a/index.html
+++ b/index.html
@@ -1107,14 +1107,14 @@ the table of composite numbers below <font face="serif"><i>n</i></font> is <font
 </h3>
 
 <div class="cite">
-candidate dissertation (Ph.D): <i><font color="300080">On the implementation of some operations in finite fields by the logarithmic depth circuits.</font></i> MSU, 2007.
+candidate dissertation (Ph.D): <i><font color="300080">On the implementation of some operations in finite fields by logarithmic depth circuits.</font></i> MSU, 2007.
 <a href="./papers/diss2007.pdf">PDF</a> (in Russian)
 </div>
 
 <p>  </p>
 
 <div class="cite">
-doctoral dissertation (Dr.Habil): <i><font color="300080">Some problems of the synthesis of parallel circuits.</font></i> MSU, 2021.
+doctoral dissertation (Dr.Habil): <i><font color="300080">Some problems of synthesis of parallel circuits.</font></i> MSU, 2021.
 <a href="./papers/diss2021.pdf">PDF</a> (in Russian) <a href="https://istina.msu.ru/dissertations/378944357">web-page</a>
 </div>
 
