--- a/index.html
+++ b/index.html
@@ -149,8 +149,12 @@ algorithms etc.).
                     <td>
                         Igor S. Sergeev
                         <h4> Etudes on the methods of designing efficient circuits </h4>
-                        I've prepared a draft of the book illustrating ideas behind the
-                        methods of synthesis of fast circuits.
+                        A draft of a book illustrating ideas behind the
+                        methods of synthesis of fast circuits. Its goal is to provide a systematic view of
+                        the most fruitful ideas leading to fast computation methods. The
+                        exposition is arranged around  the computational model of circuits
+                        of functional elements and its particular case, formulae. The proposed examples 
+                        cover mainly boolean and arithmetic (algebraic) computations.
                         <p> </p>
                         Current version (dated by 21.02.2025) <a href="./papers/S-book_210225.pdf">RUS</a> <a href="./papers/S-book_eng_210225.pdf">ENG</a>
                         <a href="http://dx.doi.org/10.13140/RG.2.2.10934.78400">DOI</a>
