--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ algorithms etc.).
                         methods of synthesis of fast circuits. Its goal is to provide a systematic view of
                         the most fruitful ideas leading to fast computation methods. The
                         exposition is arranged around  the computational model of circuits
-                        of functional elements and its particular case, formulae. The proposed examples 
+                        of functional elements and its particular case, formulae. The proposed examples
                         cover mainly boolean and arithmetic (algebraic) computations.
                         <p> </p>
                         Current version (dated by 21.02.2025) <a href="./papers/S-book_210225.pdf">RUS</a> <a href="./papers/S-book_eng_210225.pdf">ENG</a>
@@ -394,7 +394,7 @@ Matematicheskie Zametki</i>)
     <a href="https://eccc.weizmann.ac.il/report/2020/178/">web-page</a>
 
 <br> also published in Russian in Matematicheskie Voprosy Kibernetiki (Mathematical Problems of Cybernetics). Vol. 20. Moscow: Fizmatlit, 2022, 61-80.
-PDF is available on the <a href="https://keldysh.ru/mvk/index.php?id=vypusk-20">web-page</a>
+<a href="https://doi.org/10.20948/mvk-2022-61">DOI</a> PDF is available on the <a href="https://keldysh.ru/mvk/index.php?id=vypusk-20">web-page</a>
 </div>
 
 <div class="comm">
@@ -1065,9 +1065,9 @@ the table of composite numbers below <font face="serif"><i>n</i></font> is <font
 <p> <a name="p2"></a></p>
 
 <div class="cite">
-<font color="300080">[2]</font> Sergeev I. S. <i><font color="300080"> On circuits of logarithmic depth for inversion in finite fields of characteristic two.</font></i>   Matematicheskie Voprosy Kibernetiki (Mathematical Problems of Cybernetics). Vol. 15. Moscow: Fizmatlit, 2006, 35-64.
-    <a href="./papers/mvk2006_35.pdf">PDF</a> (in Russian)
-    <a href="https://keldysh.ru/mvk/index.php?id=vypusk-15">web-page</a>
+<font color="300080">[2]</font> Sergeev I. S. <i><font color="300080"> On the logarithmic depth circuits for inversion in finite fields of characteristic 2.</font></i>   Matematicheskie Voprosy Kibernetiki (Mathematical Problems of Cybernetics). Vol. 15. Moscow: Fizmatlit, 2006, 35-64.
+    PDF (in Russian) is available on the <a href="https://library.keldysh.ru/mvk.asp?lg=e&id=2006-35">web-page</a>;
+    English self-translation: <a href="./papers/inv2_eng.pdf">PDF</a>
 </div>
 
 <div class="comm">
