--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ The list of my scientific papers is also available at
 
 <div class="cite">
 <font color="300080">[45]</font> Sergeev I. S. <i><font color="300080"> Economical formulae for symmetric boolean functions.</font></i>
-(preprint) <a href="./papers/symm2025eng.pdf">PDF</a>
+(submitted to <i>Matematicheskie Voprosy Kibernetiki</i>) <a href="./papers/symm2025eng.pdf">PDF</a>
 </div>
 
 <div class="comm">
