--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@ for multiplication of <font face="serif"><i>n</i>&times<i>n</i></font> matrices,
 multiplication of degree <font face="serif"><i>n</i>&#8211;1</font> polynomials,
 and <font face="serif">4<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> for the cyclic
 convolution of order <font face="serif"><i>n</i></font> over <font face="serif"><i>GF</i>(2)</font>.
+
+ <br> <i>Conference version</i>: in Proc. PTK'20 (Moscow, 2024).
 </div>
 
 <p> <a name="p43"></a> </p>
