--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@ convolution of order <font face="serif"><i>n</i></font> over <font face="serif">
 
 <div class="cite">
 <font color="300080">[43]</font> Sergeev I. S. <i><font color="300080"> On the complexity of fanout-bounded parallel prefix circuits.</font></i>
-Diskretnyi Analiz i Issledovanie Operatsii. 2024. <b>31</b>(4), 151-167. <a href="https://doi.org/10.33048/daio.2024.31.791">DOI</a> (in Russian)
+J. Applied and Industrial Math. 2024. <b>18</b>(4), 850-859.
+    <a href="https://doi.org/10.1134/S1990478924040185">DOI</a> (translation of the
+    <a href="https://math-sobolev.ru/content/31-4/151">paper</a> from <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
 </div>
 
 <div class="comm">
