--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ Matematicheskie Zametki</i>)
 <font color="300080">[36]</font> Sergeev I. S. <i><font color="300080"> Multilevel representation and complexity of circuits of unbounded fan-in gates.</font></i>
     Moscow University Math. Bulletin. 2020. <b>75</b>(3), 121-125.
     <a href="https://doi.org/10.3103/S0027132220030055">DOI</a> (translation of the
-    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=vmumm&paperid=4327&option_lang=eng">paper</a> from <i>Vestnik Moskovskogo Universiteta. Seriya 1. Matematika. Mekhanika</i>)
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=vmumm&paperid=4327&option_lang=eng">paper</a> from <i>Vestnik Moskovskogo Universiteta. Seriya 1. Matematika. Mekhanika</i>) PDF is available <a href="https://www.researchgate.net/publication/349965737_Multilevel_Representation_and_Complexity_of_Circuits_of_Unbounded_Fan-In_Gates">here</a>
 </div>
 
 <div class="comm">
