--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@ Matematicheskie Zametki</i>)
 
 <div class="comm">
  &#9672 J. Alman, Y. Guan, A. Padaki (2022) proposed a new method for constructing low-complexity coverings of Kronecker powers of matrices and improved an upper bound on the depth-<font face="serif">2</font> additive complexity of the Sierpi&#324;ski (disjointness) matrix stated in the <a href="#book">book</a>. We provide an alternative proof for the case of symmetric matrices in a stronger form. This allows to further improve the above upper bound.
+ 
+ <br> &#8984 J. Alman and B. Li (<a href="https://arxiv.org/abs/2509.14489">2025</a>) further developed their method and (slightly) improved 
+ the complexity of computing Sierpi&#324;ski matrices. 
 </div>
 
 <p> <a name="p40"></a> </p>
