--- a/index.html
+++ b/index.html
@@ -218,6 +218,13 @@ The list of my scientific papers is also available at
  Separately, a refined approach for implementation of threshold symmetric functions is proposed.
  For example, over the basis of all binary boolean functions the complexity of general symmetric functions of <font face="serif"><i>n</i></font> variables,
  the counting function of <font><i>n</i></font> variables, and the majority function of <font><i>n</i></font> variables are <font face="serif"><i>O</i>(<i>n</i><sup>2.85</sup>)</font>, <font face="serif"><i>O</i>(<i>n</i><sup>2.82</sup>)</font>, <font face="serif"><i>O</i>(<i>n</i><sup>2.77</sup>)</font>, respectively.
+ 
+ <br> &#8984 
+ At <a href="https://www.claymath.org/events/p-vs-np-and-complexity-lower-bounds">2025 Clay Research Conference</a>, B. Rossman 
+ posed the question of whether Valiant's monotone formulae for approximate computation (that is, with probability close to 1) of the majority function 
+ could be improved by adding negation to the basis. The material in this paper implies that the majority of <font face="serif"><i>n</i></font> variables 
+ can be approximately computed via DeMorgan formulae of complexity <font face="serif"><i>O</i>(<i>n</i><sup>2.85</sup>)</font>, 
+ while Valiant's formulae have complexity <font face="serif"><i>O</i>(<i>n</i><sup>3.28</sup>)</font>. 
 </div>
 
 <p> <a name="p44"></a> </p>
@@ -316,9 +323,9 @@ Matematicheskie Zametki</i>)
 
 <div class="comm">
  &#9672 J. Alman, Y. Guan, A. Padaki (2022) proposed a new method for constructing low-complexity coverings of Kronecker powers of matrices and improved an upper bound on the depth-<font face="serif">2</font> additive complexity of the Sierpi&#324;ski (disjointness) matrix stated in the <a href="#book">book</a>. We provide an alternative proof for the case of symmetric matrices in a stronger form. This allows to further improve the above upper bound.
- 
- <br> &#8984 J. Alman and B. Li (<a href="https://arxiv.org/abs/2509.14489">2025</a>) further developed their method and (slightly) improved 
- the complexity of computing Sierpi&#324;ski matrices. 
+
+ <br> &#8984 J. Alman and B. Li (<a href="https://arxiv.org/abs/2509.14489">2025</a>) further developed their method and (slightly) improved
+ the complexity of computing Sierpi&#324;ski matrices.
 </div>
 
 <p> <a name="p40"></a> </p>
