--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@ algorithms etc.).
 
 The list of my scientific papers is also available at
 <a href="https://scholar.google.com/citations?user=iIsjHwEAAAAJ&hl=en">Google Scholar</a>,
-<a href="https://www.researchgate.net/profile/I-Sergeev-3/research">Researchgate</a> (all English papers except very recent),
+<a href="https://www.researchgate.net/profile/I-Sergeev-3/research">Researchgate</a> (all English papers except very recent, with errors/typos marked),
 <a href="https://www.mathnet.ru/php/person.phtml?&personid=27771&option_lang=eng">Mathnet</a>,
-<a href="https://istina.msu.ru/profile/isserg/">Istina</a> (all Russian papers except very recent)
+<a href="https://istina.msu.ru/profile/isserg/">Istina</a> (all Russian papers, but for registered users)
 
 <p> My permanent <b>coauthors</b> (more than one paper):
    <a href="https://www.mathnet.ru/php/person.phtml?&personid=20457&option_lang=eng">Sergey B. Gashkov</a> (scientific advisor),
