--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@ candidate dissertation (Ph.D): <i><font color="300080">On the implementation of 
 
 <div class="cite">
 doctoral dissertation (Dr.Habil): <i><font color="300080">Some problems of synthesis of parallel circuits.</font></i> MSU, 2021.
-<a href="./papers/diss2021.pdf">PDF</a> (in Russian) <a href="https://istina.msu.ru/dissertations/378944357">web-page</a>
+<a href="./papers/diss2021.pdf">PDF</a> (in Russian) <a href="https://istina.msu.ru/dissertations/378944357">web-page1</a> <a href="https:dissovet.msu.ru/dissertation/1627">web-page2</a>
 </div>
 
 
