--- a/index.html
+++ b/index.html
@@ -205,6 +205,25 @@ The list of my scientific papers is also available at
    <a href="https://www.mathnet.ru/php/person.phtml?option_lang=eng&personid=27870">Mikhail I. Grinchuk</a>
 </p>
 
+<p> <a name="p46"></a> </p>
+
+<div class="cite">
+<font color="300080">[46]</font> Sergeev I. S. <i><font color="300080"> A lower complexity bound for boolean operators.</font></i>
+(submitted to <i>Diskretnaya Matematika</i>) 
+</div>
+
+<div class="comm">
+ &#9672 We devise a way to prove lower bounds of type <font face="serif"><b>C</b>(<i>f</i>) + 2<i>n</i> &#8211; <i>o</i>(<i>n</i>)</font>
+ for boolean <font face="serif">(<i>n</i>, <i>n</i>)</font>-operators, where <font face="serif"><b>C</b>(<i>f</i>)</font> is the complexity
+ of a single function <font face="serif"><i>f</i></font> of <font face="serif"><i>n</i> &#8211; <i>o</i>(<i>n</i>)</font> variables 
+ with respect to implementation by boolean circuits over the basis of all binary boolean functions. Previously, only trivial bounds 
+ about <font face="serif"><b>C</b>(<i>f</i>) + <i>n</i></font>  were known. 
+ Therefore, we improve lower bounds to <font face="serif">5.1<i>n</i> &#8211; <i>o</i>(<i>n</i>)</font> 
+ for an explicit boolean <font face="serif">(<i>n</i>, <i>n</i>)</font>-operator,
+ and to <font face="serif">4<i>n</i> &#8211; <i>o</i>(<i>n</i>)</font> 
+ for an explicit linear boolean <font face="serif">(<i>n</i>, <i>n</i>)</font>-operator.
+ </div>
+
 <p> <a name="p45"></a> </p>
 
 <div class="cite">
