--- a/index.html
+++ b/index.html
@@ -205,22 +205,39 @@ The list of my scientific papers is also available at
    <a href="https://www.mathnet.ru/php/person.phtml?option_lang=eng&personid=27870">Mikhail I. Grinchuk</a>
 </p>
 
+<p> <a name="p47"></a> </p>
+
+<div class="cite">
+<font color="300080">[47]</font> Sergeev I. S. <i><font color="300080"> Complexity of basic boolean functions for electronics.</font></i>
+(submitted to <i>Prikladnaya Diskretnaya Matematika</i>)
+</div>
+
+<div class="comm">
+ &#9672 The paper provides a survey of circuit complexity bounds for basic boolean transforms exploited in electronics and
+efficient methods for synthesizing such circuits. The exposition covers structurally simple functions and operators: prefix and
+suffix sums, increment/decrement, up-down counter, Gray counter, carry propagation, integer addition and comparison,
+maximum/minimum of numbers, decoder, multiplexor, direct and cyclic shifts, encoder, first one indication, priority encoder,
+summing of bits and comparing the sum with a threshold, block width computation, unary encoder, truncation, sorting.
+Several applications to implementing more specific operations are also discussed, including 2-selector, weight-preserving counter, 
+multi-selection, and permutation of two bits.
+ </div>
+
 <p> <a name="p46"></a> </p>
 
 <div class="cite">
 <font color="300080">[46]</font> Sergeev I. S. <i><font color="300080"> A lower complexity bound for boolean operators.</font></i>
-(submitted to <i>Diskretnaya Matematika</i>) 
+(submitted to <i>Diskretnaya Matematika</i>)
 </div>
 
 <div class="comm">
  &#9672 We devise a way to prove lower bounds of type <font face="serif"><b>C</b>(<i>f</i>) + 2<i>n</i> &#8211; <i>o</i>(<i>n</i>)</font>
  for boolean <font face="serif">(<i>n</i>, <i>n</i>)</font>-operators, where <font face="serif"><b>C</b>(<i>f</i>)</font> is the complexity
- of a single function <font face="serif"><i>f</i></font> of <font face="serif"><i>n</i> &#8211; <i>o</i>(<i>n</i>)</font> variables 
- with respect to implementation by boolean circuits over the basis of all binary boolean functions. Previously, only trivial bounds 
- about <font face="serif"><b>C</b>(<i>f</i>) + <i>n</i></font>  were known. 
- Therefore, we improve lower bounds to <font face="serif">5.1<i>n</i> &#8211; <i>o</i>(<i>n</i>)</font> 
+ of a single function <font face="serif"><i>f</i></font> of <font face="serif"><i>n</i> &#8211; <i>o</i>(<i>n</i>)</font> variables
+ with respect to implementation by boolean circuits over the basis of all binary boolean functions. Previously, only trivial bounds
+ about <font face="serif"><b>C</b>(<i>f</i>) + <i>n</i></font>  were known.
+ Therefore, we improve lower bounds to <font face="serif">5.1<i>n</i> &#8211; <i>o</i>(<i>n</i>)</font>
  for an explicit boolean <font face="serif">(<i>n</i>, <i>n</i>)</font>-operator,
- and to <font face="serif">4<i>n</i> &#8211; <i>o</i>(<i>n</i>)</font> 
+ and to <font face="serif">4<i>n</i> &#8211; <i>o</i>(<i>n</i>)</font>
  for an explicit linear boolean <font face="serif">(<i>n</i>, <i>n</i>)</font>-operator.
  </div>
 
@@ -253,7 +270,10 @@ The list of my scientific papers is also available at
 <div class="cite">
 <font color="300080">[44]</font> Sergeev I. S. <i><font color="300080"> Lower bounds on the additive
 complexity of linear operators and bilinear algorithms for matrix and polynomial multiplication over <font face="serif">GF(2)</font>.</font></i>
-(submitted to <i>Matematicheskie Zametki</i>) <a href="./papers/lowerlin2024eng.pdf">slides</a>
+Mathematical Notes. 2025. <b>118</b>(4), 848-862.
+    <a href="https://doi.org/10.1134/S0001434625605143">DOI</a> (translation of the
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=mzm&paperid=14541&option_lang=eng">paper</a> 
+    from <i> Matematicheskie Zametki</i>) <a href="./papers/lowerlin2024eng.pdf">slides</a>
 </div>
 
 <div class="comm">
