--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ efficient methods for synthesizing such circuits. The exposition covers structur
 suffix sums, increment/decrement, up-down counter, Gray counter, carry propagation, integer addition and comparison,
 maximum/minimum of numbers, decoder, multiplexor, direct and cyclic shifts, encoder, first one indication, priority encoder,
 summing of bits and comparing the sum with a threshold, block width computation, unary encoder, truncation, sorting.
-Several applications to implementing more specific operations are also discussed, including 2-selector, weight-preserving counter, 
+Several applications to implementing more specific operations are also discussed, including 2-selector, weight-preserving counter,
 multi-selection, and permutation of two bits.
  </div>
 
@@ -272,8 +272,9 @@ multi-selection, and permutation of two bits.
 complexity of linear operators and bilinear algorithms for matrix and polynomial multiplication over <font face="serif">GF(2)</font>.</font></i>
 Mathematical Notes. 2025. <b>118</b>(4), 848-862.
     <a href="https://doi.org/10.1134/S0001434625605143">DOI</a> (translation of the
-    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=mzm&paperid=14541&option_lang=eng">paper</a> 
-    from <i> Matematicheskie Zametki</i>) <a href="./papers/lowerlin2024eng.pdf">slides</a>
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=mzm&paperid=14541&option_lang=eng">paper</a>
+    from <i> Matematicheskie Zametki</i>) <a href="./papers/lowerlin2024eng.pdf">slides</a>; <a href="https://rdcu.be/eWcCY">view-only PDF</a> 
+    (provided by the publisher)
 </div>
 
 <div class="comm">
@@ -300,7 +301,7 @@ convolution of order <font face="serif"><i>n</i></font> over <font face="serif">
 <font color="300080">[43]</font> Sergeev I. S. <i><font color="300080"> On the complexity of fanout-bounded parallel prefix circuits.</font></i>
 J. Applied and Industrial Math. 2024. <b>18</b>(4), 850-859.
     <a href="https://doi.org/10.1134/S1990478924040185">DOI</a> (translation of the
-    <a href="https://math-sobolev.ru/content/31-4/151">paper</a> from <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
+    <a href="https://math-sobolev.ru/content/31-4/151">paper</a> from <i>Diskretnyi Analiz i Issledovanie Operatsii</i>) <a href="https://rdcu.be/evUj1">view-only PDF</a> (provided by the publisher)
 </div>
 
 <div class="comm">
@@ -319,7 +320,7 @@ for small <font face="serif"><i>k</i></font>'s.
     Mathematical Notes. 2024. <b>115</b>(3), 378-389.
     <a href="https://doi.org/10.1134/S0001434624030106">DOI</a> (translation of the
     <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=mzm&paperid=13984&option_lang=eng">paper</a> from <i>
-Matematicheskie Zametki</i>)
+Matematicheskie Zametki</i>) <a href="https://rdcu.be/dMUWe">view-only PDF</a> (provided by the publisher)
 </div>
 
 <div class="comm">
@@ -403,7 +404,7 @@ Discrete Mathematics and Applications. 2024. <b>34</b>(1), 29-32.
     Mathematical Notes. 2021. <b>109</b>(3), 445-458.
     <a href="https://doi.org/10.1134/S0001434621030123">DOI</a> (translation of the
     <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=mzm&paperid=12802&option_lang=eng">paper</a> from <i>
-Matematicheskie Zametki</i>)
+Matematicheskie Zametki</i>) <a href="https://rdcu.be/cnSWq">view-only PDF</a> (provided by the publisher)
 </div>
 
 <div class="comm">
@@ -418,7 +419,7 @@ Matematicheskie Zametki</i>)
 <font color="300080">[38]</font> Sergeev I. S. <i><font color="300080"> On the upper bound of the complexity of sorting.</font></i>
     Computational Mathematics and Mathematical Physics. 2021. <b>61</b>(2), 329-346.
     <a href="https://doi.org/10.1134/S0965542521020111">DOI</a> (translation of the
-    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=zvmmf&paperid=11203&option_lang=eng">paper</a> from <i>Zhurnal Vychislitel'noi Matematiki i Matematicheskoi Fiziki</i>)
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=zvmmf&paperid=11203&option_lang=eng">paper</a> from <i>Zhurnal Vychislitel'noi Matematiki i Matematicheskoi Fiziki</i>) <a href="https://rdcu.be/cig3q">view-only PDF</a> (provided by the publisher)
 </div>
 
 <div class="comm">
