--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ complexity of linear operators and bilinear algorithms for matrix and polynomial
 Mathematical Notes. 2025. <b>118</b>(4), 848-862.
     <a href="https://doi.org/10.1134/S0001434625605143">DOI</a> (translation of the
     <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=mzm&paperid=14541&option_lang=eng">paper</a>
-    from <i> Matematicheskie Zametki</i>) <a href="./papers/lowerlin2024eng.pdf">slides</a>; <a href="https://rdcu.be/eWcCY">view-only PDF</a> 
+    from <i> Matematicheskie Zametki</i>) <a href="./papers/lowerlin2024eng.pdf">slides</a>; <a href="https://rdcu.be/eWcCY">view-only PDF</a>
     (provided by the publisher)
 </div>
 
@@ -502,7 +502,7 @@ Matematicheskie Zametki</i>) <a href="https://rdcu.be/cnSWq">view-only PDF</a> (
 <font color="300080">[33]</font> Sergeev I. S. <i><font color="300080"> On the complexity of monotone circuits for threshold symmetric Boolean functions.</font></i>
     Discrete Mathematics and Applications. 2021. <b>31</b>(5), 345-366.
     <a href="https://doi.org/10.1515/dma-2021-0031">DOI</a> (translation of the
-    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=1547&option_lang=eng">paper</a> (2020) from <i>Diskretnaya matematika</i>)
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=1547&option_lang=eng">paper</a> (2020) from <i>Diskretnaya matematika</i>) PDF is available <a href="https://www.researchgate.net/publication/355427877_On_the_complexity_of_monotone_circuits_for_threshold_symmetric_Boolean_functions">here</a>
 </div>
 
 <div class="comm">
