--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ multi-selection, and permutation of two bits.
 <p> <a name="p44"></a> </p>
 
 <div class="cite">
-<font color="300080">[44]</font> Sergeev I. S. <i><font color="300080"> Lower bounds on the additive
+<font color="300080">[44]</font> Sergeev I. S. <i><font color="300080"> Lower bounds for additive
 complexity of linear operators and bilinear algorithms for matrix and polynomial multiplication over <font face="serif">GF(2)</font>.</font></i>
 Mathematical Notes. 2025. <b>118</b>(4), 848-862.
     <a href="https://doi.org/10.1134/S0001434625605143">DOI</a> (translation of the
