--- a/index.html
+++ b/index.html
@@ -205,15 +205,31 @@ The list of my scientific papers is also available at
    <a href="https://www.mathnet.ru/php/person.phtml?option_lang=eng&personid=27870">Mikhail I. Grinchuk</a>
 </p>
 
+<p> <a name="e14"></a>  </p>
+
+<div class="cite">
+<font color="300080">[e14]</font> Sergeev I. S. <i><font color="300080"> A note on the depth of optimal fanout-bounded prefix circuits. </font></i> arXiv ePrints. 2025. Art. 2512.23657.
+    <a href="https://doi.org/10.48550/arXiv.2512.23657">DOI</a> <a href="./papers/2512.23657v1eng.pdf">PDF</a>
+</div>
+
+<div class="comm">
+ &#9672 It is shown that the minimal depth of an optimal prefix circuit (i.e., a zero-deficiency circuit) on <font face="serif"><i>N</i></font> inputs 
+with fanout bounded by <font face="serif"><i>k</i></font> is <font face="serif">log<sub><i>a</i></sub><i>N</i> &#177 <i>O</i>(1)</font>, where
+<font face="serif"><i>a</i></font> is the unique positive root of the polynomial 
+<font face="serif">2 + <i>x</i> + <i>x</i><sup>2</sup> + ... + <i>x</i><sup><i>k</i> &#8211; 2</sup> &#8211; <i>x<sup>k</sup></i>.</font>
+This bound was previously known for <font face="serif"><i>k</i>=2</font> and <font face="serif"><i>k</i>=&#8734</font>.
+
+</div>
+
 <p> <a name="p47"></a> </p>
 
 <div class="cite">
-<font color="300080">[47]</font> Sergeev I. S. <i><font color="300080"> Complexity of basic boolean functions for electronics.</font></i>
+<font color="300080">[47]</font> Sergeev I. S. <i><font color="300080"> Complexity of basic boolean functions for digital circuit design.</font></i>
 (submitted to <i>Prikladnaya Diskretnaya Matematika</i>)
 </div>
 
 <div class="comm">
- &#9672 The paper provides a survey of circuit complexity bounds for basic boolean transforms exploited in electronics and
+ &#9672 The paper provides a survey of circuit complexity bounds for basic boolean transforms exploited in digital circuit design and
 efficient methods for synthesizing such circuits. The exposition covers structurally simple functions and operators: prefix and
 suffix sums, increment/decrement, up-down counter, Gray counter, carry propagation, integer addition and comparison,
 maximum/minimum of numbers, decoder, multiplexor, direct and cyclic shifts, encoder, first one indication, priority encoder,
