--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@ The list of my scientific papers is also available at
 </div>
 
 <div class="comm">
- &#9672 It is shown that the minimal depth of an optimal prefix circuit (i.e., a zero-deficiency circuit) on <font face="serif"><i>N</i></font> inputs 
+ &#9672 It is shown that the minimal depth of an optimal prefix circuit (i.e., a zero-deficiency circuit) on <font face="serif"><i>N</i></font> inputs
 with fanout bounded by <font face="serif"><i>k</i></font> is <font face="serif">log<sub><i>a</i></sub><i>N</i> &#177 <i>O</i>(1)</font>, where
-<font face="serif"><i>a</i></font> is the unique positive root of the polynomial 
+<font face="serif"><i>a</i></font> is the unique positive root of the polynomial
 <font face="serif">2 + <i>x</i> + <i>x</i><sup>2</sup> + ... + <i>x</i><sup><i>k</i> &#8211; 2</sup> &#8211; <i>x<sup>k</sup></i>.</font>
 This bound was previously known for <font face="serif"><i>k</i>=2</font> and <font face="serif"><i>k</i>=&#8734</font>.
 
@@ -261,7 +261,7 @@ multi-selection, and permutation of two bits.
 
 <div class="cite">
 <font color="300080">[45]</font> Sergeev I. S. <i><font color="300080"> Economical formulae for symmetric boolean functions.</font></i>
-(submitted to <i>Matematicheskie Voprosy Kibernetiki</i>) <a href="./papers/symm2025eng.pdf">PDF</a>
+(submitted to <i>Matematicheskie Voprosy Kibernetiki</i>); English self-translation: <a href="./papers/symm2025eng.pdf">PDF</a>
 </div>
 
 <div class="comm">
@@ -420,7 +420,7 @@ Discrete Mathematics and Applications. 2024. <b>34</b>(1), 29-32.
     Mathematical Notes. 2021. <b>109</b>(3), 445-458.
     <a href="https://doi.org/10.1134/S0001434621030123">DOI</a> (translation of the
     <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=mzm&paperid=12802&option_lang=eng">paper</a> from <i>
-Matematicheskie Zametki</i>) <a href="https://rdcu.be/cnSWq">view-only PDF</a> (provided by the publisher)
+Matematicheskie Zametki</i>) PDF is available <a href="https://www.researchgate.net/publication/350466693_Formula_Complexity_of_a_Linear_Function_in_a_k-ary_Basis">here</a>
 </div>
 
 <div class="comm">
@@ -435,7 +435,7 @@ Matematicheskie Zametki</i>) <a href="https://rdcu.be/cnSWq">view-only PDF</a> (
 <font color="300080">[38]</font> Sergeev I. S. <i><font color="300080"> On the upper bound of the complexity of sorting.</font></i>
     Computational Mathematics and Mathematical Physics. 2021. <b>61</b>(2), 329-346.
     <a href="https://doi.org/10.1134/S0965542521020111">DOI</a> (translation of the
-    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=zvmmf&paperid=11203&option_lang=eng">paper</a> from <i>Zhurnal Vychislitel'noi Matematiki i Matematicheskoi Fiziki</i>) <a href="https://rdcu.be/cig3q">view-only PDF</a> (provided by the publisher)
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=zvmmf&paperid=11203&option_lang=eng">paper</a> from <i>Zhurnal Vychislitel'noi Matematiki i Matematicheskoi Fiziki</i>) PDF is available <a href="https://www.researchgate.net/publication/350137506_On_the_Upper_Bound_of_the_Complexity_of_Sorting">here</a>
 </div>
 
 <div class="comm">
