--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ This bound was previously known for <font face="serif"><i>k</i>=2</font> and <fo
 <p> <a name="p47"></a> </p>
 
 <div class="cite">
-<font color="300080">[47]</font> Sergeev I. S. <i><font color="300080"> Complexity of basic boolean functions for digital circuit design.</font></i>
-(submitted to <i>Prikladnaya Diskretnaya Matematika</i>)
+<font color="300080">[47]</font> Sergeev I. S. <i><font color="300080"> Complexity of basic boolean operators for digital circuit design.</font></i>
+(submitted to <i>Intellektual'nye sistemy. Teoriya i prilozheniya</i>)
 </div>
 
 <div class="comm">
